cambios de estudiantes a AMIGOS

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Hola mundo</title>
 </head>
 <body>
-    <p>Hola estudiantes, este es mi sitio web, sígueme en twiter como @contador1503 </p>
+    <p>Hola amigas y amigos, este es mi sitio web, sígueme en twiter como @contador1503 </p>
     
 </body>
 </html>
